--- a/src/styles/Hoover.css
+++ b/src/styles/Hoover.css
@@ -1,7 +1,8 @@
 .hoover {
   width: 10px;
   height: 10px;
-  background: rgba(255, 0, 0, 0.5);
+  background: url(../hoover.png);
+  background-size: 100% 100%;
   position: absolute;
   left: 0;
   bottom: 0;
